[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gen_brandonedmunds2"
version = "0.0.1"
authors = [
  { name="Brandon Edmunds" },
]
description = "gen"
readme = "README.md"
dependencies = [
    "numpy",
    "torch",
    "matplotlib"
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/brandonedmunds2/CSE582_Final"
"Bug Tracker" = "https://github.com/brandonedmunds2/CSE582_Final/issues"